# lerobot_playground

./: CONTRIBUTING.md  MANIFEST.in  README.md  calibrate_camera.py  check.py  eye_to_hand_calibration.py  eye_to_hand_calibration_2.py  pyproject.toml  teleop.py
calibration_data/: base_to_gripper_transform.npy  camera_distortion_coefficients.npy  camera_instrinsic.npy  camera_to_target_transform.npy
src/: .gitignore  extrinsic_calibration.json  extrinsic_calibration_save.json  hardware_config.yaml  icp.py  icp_new.py  intrinsic_calibration.json  intrinsic_calibration_640.json  intrinsic_calibration_848.json  intrinsic_calibration_save.json  phystwin_capture.py  postprocess.py  sam_fused_pcd.py  so_arm_100_foxglove_viewer.py  teleop.py  teleop_config.yaml  test.py
src/calibration/: calibrate_camera.py  capture_calibration_data.py  eye_to_hand_calibration.py  fine_tune.py  intrinsic_calibration.json
src/calibration/SO101/: forward_kinematics.py
src/control/: teleop.py
src/lerobot_3d/: __init__.py  icp.py  icp_new.py  paths.py  teleop_config.py
src/lerobot_3d/common/: types.py
src/lerobot_3d/control/: teleop.py
src/lerobot_3d/point_clouds/: camera_stream.py  orbbec_camera_stream.py  point_cloud_viewer.py  robot_state.py  system_vis.py  viser_viewer.py
src/lerobot_playground/: __init__.py  hardware_config.py  icp.py  paths.py  teleop_config.py
src/lerobot_playground/control/: teleop.py
src/lerobot_playground/point_clouds/: camera_stream.py  robot_state.py  system_vis.py
src/point_clouds/: camera_stream.py  point_cloud_viewer.py  system_vis.py  tuner.py
tests/hardware_stack/: test_robot_state.py
